fix footer, heading styles, list alignment

--- a/footer.less
+++ b/footer.less
@@ -143,6 +143,7 @@
                 width: 100px;
                 height: 37px;
                 background-repeat: no-repeat;
+                font-size: 0;
             }
 
             p {
@@ -157,6 +158,14 @@
             &:first-child {
                 margin-top: 0;
             }
+        }
+    }
+    
+    .agency-signature {
+        font-size: 14px;
+
+        a {
+            font-size: 14px;
         }
     }
 }
