--- a/typography.less
+++ b/typography.less
@@ -12,7 +12,7 @@
         font-size: 28pt;
         line-height: 33.6pt;
         margin-bottom: 12px;
-        color: darken(@brand-secondary, 11%);
+        color: #78a5b6;
     }
 
     h3 {
@@ -38,7 +38,7 @@
         line-height: 21.6pt;
         margin-bottom: 6px;
         text-transform: uppercase;
-        color: darken(@brand-secondary, 11%);
+        color: #78a5b6;
     }
 
     h6 {
@@ -60,7 +60,8 @@
 
     ul {
         list-style: none;
-        padding-left: 0;
+        padding-left: 37px;
+        text-indent: -18px;
 
         li {
             margin: 3px 0;
@@ -74,10 +75,10 @@
             &:before {
                 content: '\25AA';
                 display: inline-block;
-                width: 37px;
+                width: 18px;
                 font-size: 30px;
                 line-height: 16px;
-                padding-left: 18px;
+                padding-left: 17px;
                 color: @brand-secondary;
                 vertical-align: bottom;
             }
